--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Math Game</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <script src="./js/app.js" type="module"></script>
+    <div class="task-box">
+      <span id="task"></span>
+    </div>
+
+    <div class="stats">
+      <div class="good">👌 <span id="good">0</span></div>
+      <div class="timer" id="timer">0s</div>
+      <div class="bad">😔 <span id="bad">0</span></div>
+    </div>
+
+    <div class="grid" id="grid"></div>
+
+    <script type="module" src="./js/app.js"></script>
   </body>
 </html>
