add new somthing

--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Math Game</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="task-box">
-      <span id="task"></span>
-    </div>
+    <div id="shochik"></div>
+    <div id="grid" class="grid"></div>
+    <div class="score-container">
+   <div class="question">0 + 0</div>
 
-    <div class="grid" id="grid"></div>
+  <div class="score-container">
+    <span>👌- </span><span class="score">0</span>
+  </div>
 
-    <script type="module" src="./js/app.js"></script>
+  <div id="grid" class="grid"></div>
+
+    <script type="module" src="./js/app.js"></script> 
   </body>
 </html>
